# goat

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  10pyenv.sh  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  TODO  Taskfile.yml  VERSION  action.yml  code_review.py  entrypoint.sh  package-lock.json  package.json  pyproject.toml  setup.cfg  tasks.py  test.md  test.py  test.rst
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/etc/: dictionary.txt
.github/linters/: .hadolint.yml  .python-lint  setup.cfg
.github/workflows/: commit.yml  pr.yml  release.yml  security.yml  update.yml
Task/: README.md  Taskfile.yaml  Taskfile.yml
Task/bash/: Taskfile.yml
Task/lambda/: Taskfile.yml
Task/lambda-zip/: Taskfile.yml
Task/python/: Taskfile.yaml  Taskfile.yml
Task/terraform/: Taskfile.yml
code_reviews/: __init__.py  config.py  constants.py
etc/: .dockerfilelintrc  .flake8  .gitleaks.toml  .hadolint.yml  .isort.cfg  .jscpd.json  .linkspector.yml  .markdown-lint.yml  .shellcheckrc  .textlintrc.json  .yamllint.yml  cspell.config.js  cspell.json  links.json  linter-list.txt  linters.json  linters.txt  oci.yml  pyproject.toml  seiso_global_dictionary.txt  spelling.json
goat/: Task
