[bumpversion]
current_version = 2025.10.01
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Seiso"
description = "The Seiso Grand Opinionated AutoTester (GOAT)"
description-file = "README.md"
versioning = "CalVer"
license_file = "LICENSE"
name = "goat"
url = "https://github.com/SeisoLLC/goat"

[bumpversion:file:VERSION]

[bumpversion:file:action.yml]

[bumpversion:file:code_reviews/__init__.py]
